fix unexpected whitespace on generated frontendmentor screenshoot

--- a/style.css
+++ b/style.css
@@ -149,6 +149,7 @@ main {
     align-self: flex-end;
     box-sizing: border-box;
     margin-block-end: 1rem;
+    overflow: hidden;
 }
 
 .card .card-body {
@@ -188,7 +189,7 @@ main {
         grid-template-columns: 1fr 1fr;
         grid-template-rows: 1fr 1fr 1fr;
         justify-content: center;
-        margin-block-end: 3.25rem;
+        /* padding-block-end: 3.25rem; */
     }
 
     .card {
@@ -215,7 +216,6 @@ main {
         grid-column: 1 / 3;
         grid-row: 3;
         justify-self: center;
-        margin-block-end: 0;
     }
 
     header {
@@ -251,7 +251,7 @@ main {
         grid-template-columns: 1fr 1fr 1fr;
         grid-template-rows: 1fr;
         justify-content: center;
-        margin-bottom: 7rem;
+        padding-block-end: 7rem;
     }
 
     .card {
@@ -276,7 +276,6 @@ main {
         grid-column: 3;
         grid-row: 1 / 3;
         align-self: center;
-        margin-block-end: 0;
     }
 
     .body-text {
